# closed-loop-runaway-control

./: .gitignore  README.md  pyproject.toml
ml_seizure_detection/: .gitignore  README.md  pyproject.toml
ml_seizure_detection/results/ml_run/: summary.json
ml_seizure_detection/results/ml_run/tables/: feature_importance.csv  long_record_fa_by_threshold.csv  long_record_false_alarms.csv  long_record_predictions.csv  model_comparison.csv  operating_thresholds.csv  test_metrics.csv  test_predictions.csv  window_dataset.csv
ml_seizure_detection/scripts/: run_ml.py
ml_seizure_detection/src/ml_seizure_detection/: __init__.py  dataset.py  features.py  long_validation.py  metrics.py  models.py  plotting.py
ml_seizure_detection/tests/: test_ml.py
paper/: .gitignore  closed_loop_runaway_suppression_report.tex
results/core_run/: summary.json
results/core_run/tables/: detector_benchmark.csv  detector_benchmark_summary.csv  feature_benchmark.csv  feature_benchmark_summary.csv  latency_sensitivity.csv  long_baseline_fa_by_k.csv  long_baseline_false_alarms.csv  table1_stress_summary.csv  table1_stress_summary.md  threshold_summary.csv  threshold_sweep.csv  trial_summary.csv
scripts/: regen_fig6_latency.py  regen_figs_with_uncertainty.py  run_core.py
src/runaway_control/: __init__.py  config.py  controller.py  detector.py  experiments.py  lfp.py  metrics.py  network.py  plotting.py
tests/: test_core.py
