[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "closed-loop-runaway-control"
version = "0.1.0"
description = "BME 525 graduate final project for closed-loop detection and suppression of seizure-like runaway activity in an excitatory-inhibitory spiking network."
requires-python = ">=3.10"
dependencies = [
    "brian2>=2.10",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]
