[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-seizure-detection"
version = "0.1.0"
description = "Machine-learning detector for simulated seizure-like runaway windows in a BME 525 final project."
requires-python = ">=3.10"
dependencies = [
    "brian2>=2.10",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]

